Sat Jul 30 10:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_1395_Regression/Test_i.cpp:
          Fixed casing of include

Fri Jul 29 17:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/LifespanStrategyPersistent.cpp:
          Added missing ACE_CHECK

Fri Jul 29 18:41:50 2005  Simon McQueen  <sm@prismtech.com>

        * tao/ImR_Client/ImR_Client.cpp:

          Fixed typo.

        * orbsvcs/tests/Bug_1395_Regression/Bug_1395_Regression.mpc:
        * orbsvcs/tests/Bug_1395_Regression/Test_i.cpp:

          Forced link of ImR_Client to fix error on static builds.

Fri Jul 29 17:55:23 2005  Simon McQueen  <sm@prismtech.com>

        * tao/ORB_Core.h:
        * tao/ORB_Core.i:

          Add accessor for use_implrepo_ value.

        * tao/ImR_Client/ImR_Client.cpp:

          Make calling imr_notify_startup when the ImR ref cannot be
          found or narrowed into an error condition.

        * tao/PortableServer/LifespanStrategyPersistent.h:
        * tao/PortableServer/LifespanStrategyPersistent.cpp:

          Read the use_imr_ value from the ORB core. Only try and load
          the ImR_Client and call imr_notify_startup if use_imr_ set.

Fri Jul 29 14:15:11 2005  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_1020_Basic_Regression/Server_Task.cpp:

          Added ACE_NOTREACHED to unreachable code to fix warning on
          HP non stop build.

Thu Jul 28 12:17:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_1630_Regression/testclient.cpp:
          Added include of IFR_Client_Adapter_Impl, this should make sure
          the IFR_Client is linked into the exe and the static initializers
          are called. This should fix this test in the Windows static
          builds

Thu Jul 28 10:55:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OctetSeq/client.cpp: